# LDE

./: .gitignore  AUTHORS  CMakeList.txt  CMakeLists.txt  Makefile  README.md  ldemanual.abw  ldemanual.txt
debian/: README.Debian  README.source  changelog  control  control~  copyright  docs~  files  init.d.ex  lde.cron.d.ex  lde.default.ex  lde.doc-base.EX  lde.substvars  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  watch.ex
rpm/: lde.spec
share/: lcalc.desktop  lde-control-center.desktop  lde-logout.desktop  ldeabout.desktop  loofm.desktop  looftp.desktop  looget.desktop  looplorer.desktop  lootepad.desktop  lrun.desktop  lxde-logout.desktop
shell/: startlde
src/: CMakeLists.txt  install.sh  lde.pro
src/LCalc/: button.cpp  button.h  calculator.cpp  calculator.h
src/LooFM/: ._filemanager_zh.ts  filemanager.pro  fileview.cpp  fileview.h  fileview.ui  main.cpp  resource.qrc
src/LooFTP/: LooFTP.pro  main.cpp  widget.cpp  widget.h  widget.ui
src/Looget/: CMakeLists.txt  Looget.pro  widget.cpp  widget.h  widget.ui
src/Looplorer 0.4/: Looplorer.pro  locationbar.cpp  locationbar.h  locationbar.ui  main.cpp  rc.qrc  widget.cpp  widget.h  widget.ui
src/Looplorer 0.4/bookmarks/: addbookmarkdialog.ui  bookmarksdialog.ui
src/Looplorer 2/: looplorer.vcxproj.filters  looplorer_zh.ts  main.cpp  mainwindow.cpp  mainwindow.h
src/Lootepad/: CMakeLists.txt  Lootepad.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  rc.qrc  texteditor.cpp  texteditor.h  textedittab.cpp  textedittab.h
src/Lootepad 0.5/: Lootepad.pro  mainwindow.h  mainwindow.ui  rc.qrc
src/lcalc/: CMakeLists.txt  button.cpp  button.h  calculator.cpp  calculator.h  history.cpp  history.h  lcalc.pro  main.cpp
src/ldeabout/: CMakeLists.txt  laboutwidget.cpp  laboutwidget.h  ldeabout.pro  main.cpp  widget.cpp  widget.h  widget.ui
src/ldecc/: CMakeLists.txt  descc.cpp  descc.h  descc.ui  gencc.cpp  gencc.h  gencc.ui  lancc.cpp  lancc.h  lancc.ui  ldecc.cpp  ldecc.h  ldecc.pro  ldecc.ui  ldeccrc.qrc  main.cpp  safcc.cpp  safcc.h  safcc.ui
src/ldeframework/lconfig/: lconfig.cpp  lconfig.h  lconfig.pri  lconfigbase.cpp  lconfigbase.h  lconfigfile.cpp  lconfigfile.h  lconfiggroup.cpp  lconfiggroup.h  lconfigitem.cpp  lconfigitem.h
src/ldeframework/lithium/: lapplication.cpp  lapplication.h  lithium.pri  lithium.pro  lithium_global.h  lpushbutton.cpp  lpushbutton.h  ltextbutton.cpp  ltextbutton.h  lthememanager.cpp  lthememanager.h  res.qrc
src/ldeframework/lithium/themes/dark/: LBaseButton.theme  LPushButton.theme  LTextButton.theme
src/ldeinit/: CMakeLists.txt  init.cpp  init.h  ldeinit.pro  main.cpp
src/loofm/: CMakeLists.txt  fileview.cpp  fileview.h  fileview.ui  loofm.pro  manifest.json  resource.qrc
src/loogout/: CMakeLists.txt  loogout.pro  main.cpp  widget.cpp  widget.h  widget.ui
src/looplorer/: CMakeLists.txt  looplorer.pro  looplorer.sln  looplorer.vcxproj  looplorer.vcxproj.filters  main.cpp  mainwindow.cpp  mainwindow.h
src/lrun/: CMakeLists.txt  lrun.pro  widget.cpp  widget.h  widget.ui
src/qtftp/: qtftp.pro
src/qtftp/include/QtFtp/: QtFtp  QtFtpDepends  QtFtpVersion  headers.pri  qftp.h  qtftpversion.h  qurlinfo.h
src/qtftp/lib/: libQt5Ftp.prl
src/qtftp/lib/cmake/Qt5Ftp/: Qt5FtpConfig.cmake  Qt5FtpConfigVersion.cmake
src/qtftp/lib/pkgconfig/: Qt5Ftp.pc
src/qtftp/mkspecs/modules/: qt_lib_ftp.pri
src/qtftp/mkspecs/modules-inst/: qt_lib_ftp.pri  qt_lib_ftp_private.pri
xsessions/: LDE.desktop
